[workspace]
members = [
    "workers/sample-worker",
    "workers/yral-ml-feed-cache",
    "workers/yral-onchain-backend",
    "workers/icpump_token_cleanup",
    "workers/kv-fetch",
    "workers/yral-upload-video",
    "workers/yral-pump-n-dump",
    "workers/yral-hot-or-not",
    "workers/yral-coin",
    "worker-utils",
]
resolver = "2"

[workspace.dependencies]
worker = { version = "0.5.0" }
worker-macros = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
futures = "0.3.31"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.49"
ic-agent = { version = "0.41.0", features = ["wasm-bindgen", "pem"] }
getrandom = { version = "0.2", features = ["js"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
worker-utils = { package = "yral-worker-utils", path = "worker-utils" }
num-bigint = "0.4.6"
candid = "0.10.11"
enum_dispatch = "0.3.13"
serde_with = "3.12.0"

# Common dependencies across workers
cfg-if = "0.1.2"
reqwest = { version = "0.12.15", features = ["json"] }
stringreader = "0.1.1"
uuid = { version = "1.17.0", features = ["v4", "serde", "js"] }
k256 = { version = "0.13.4", default-features = false, features = ["std", "jwk"] }
ciborium = "0.2.2"
chrono = "0.4.40"
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
base64 = "0.22.1"

# Web framework dependencies
axum = { version = "0.7", default-features = false, features = ["macros", "json", "multipart"] }
tower-service = "0.3.2"
tower-http = { version = "0.6.2", features = ["cors"] }

# gRPC dependencies
tonic = { version = "0.12.3", default-features = false, features = ["prost", "codegen"] }
tonic-web-wasm-client = "0.6.1"
prost = "0.13.5"

# Yral specific dependencies
yral-metadata-types = { git = "https://github.com/dolr-ai/yral-metadata", branch = "master" }
yral-metadata-client = { git = "https://github.com/dolr-ai/yral-metadata", branch = "master" }
yral-identity = { git = "https://github.com/dolr-ai/yral-common", branch = "master", default-features = false, features = ["ic-git", "wasm-bindgen"] }
yral-canisters-client = { git = "https://github.com/dolr-ai/yral-common", branch = "master" }
yral-canisters-common = { git = "https://github.com/dolr-ai/yral-common", branch = "master", features = ["js"] }
pump-n-dump-common = { git = "https://github.com/dolr-ai/yral-common", branch = "master", package = "yral-pump-n-dump-common" }
yral-metrics = { git = "https://github.com/dolr-ai/yral-common", branch = "master", default-features = false, features = ["js"] }
hon-worker-common = { git = "https://github.com/dolr-ai/yral-common", branch = "master" }
global-constants = { git = "https://github.com/dolr-ai/yral-common", branch = "master" }

# Build dependencies
tonic-build = { version = "0.12.0", default-features = false, features = ["prost"] }
