[package]
name = "icpump_token_cleanup"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker.workspace = true
serde.workspace = true
serde_json.workspace = true
candid.workspace = true
ic-agent = { workspace = true, features = ["wasm-bindgen"] }
reqwest.workspace = true
stringreader.workspace = true
futures.workspace = true
getrandom.workspace = true