[package]
name = "sample-worker"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker.workspace = true
serde.workspace = true
serde_json.workspace = true
cfg-if.workspace = true
console_error_panic_hook.workspace = true

[features]
console_error_panic_hook = []

[profile.release]
lto = true
strip = true
codegen-units = 1
