[package]
name = "yral-hot-or-not"
version = "0.1.0"
edition = "2021"
authors = ["rupansh <rupanshsekar@hotmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker.workspace = true
worker-macros.workspace = true
console_error_panic_hook.workspace = true
worker-utils.workspace = true
num-bigint.workspace = true
candid.workspace = true
serde.workspace = true
wasm-bindgen-futures.workspace = true
enum_dispatch.workspace = true
serde_json.workspace = true
serde_with.workspace = true

# crate specific stuff
getrandom.workspace = true
k256.workspace = true
ic-agent = { workspace = true, features = ["wasm-bindgen"] }
reqwest.workspace = true

# yral deps
yral-identity.workspace = true
hon-worker-common.workspace = true
yral-canisters-client = { workspace = true, features = ["sns-ledger", "individual-user"] }
global-constants.workspace = true
yral-metadata-client = { git = "https://github.com/yral-dapp/yral-metadata", branch = "master" }
