[package]
name = "cf-workers"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
local = []


[dependencies]
worker.workspace = true
worker-macros.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
ic-agent = { workspace = true, features = [
    "wasm-bindgen",
    "pem",
] }
candid.workspace = true
base64.workspace = true
getrandom.workspace = true
yral-metadata-types.workspace = true
stringreader.workspace = true
# yral-metadata-client = { git = "https://github.com/yral-dapp/yral-metadata", rev = "56e3f1f1f5f452673bee17739520c800c1264295"}
# yral-canisters-common = { git = "https://github.com/yral-dapp/yral-common.git", rev = "5e4414a3f1e0644d93f181949d533c6a9991da04"}
