[package]
name = "yral-pump-n-dump"
version = "0.1.0"
edition = "2021"
authors = ["rupansh <rupanshsekar@hotmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# workspace deps
worker.workspace = true
worker-macros.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
futures.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen-futures.workspace = true
worker-utils.workspace = true
num-bigint.workspace = true
candid.workspace = true
enum_dispatch.workspace = true

# crate specific stuff
ic-agent = { workspace = true, features = ["wasm-bindgen"] }
getrandom.workspace = true
uuid.workspace = true
k256.workspace = true
ciborium.workspace = true

# yral specific stuff
yral-metadata-client = { workspace = true }
yral-identity.workspace = true
yral-canisters-client = { workspace = true, features = ["backend", "sns-ledger"] }
yral-canisters-common.workspace = true
pump-n-dump-common.workspace = true
yral-metrics.workspace = true