[package]
name = "yral-upload-video"
version = "0.1.0"
edition = "2021"
authors = [ "ravi-sawlani-yral <ravi@gobazzinga.io>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { workspace = true, features = ['http', 'axum', 'queue'] }
worker-macros = { workspace = true, features = ['http'] }
axum.workspace = true
tower-service.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
ic-agent = { workspace = true, features = ["wasm-bindgen", "pem"] }
k256.workspace = true
yral-metadata-client.workspace = true
yral-metadata-types.workspace = true
yral-canisters-client = { workspace = true, features = ["individual-user", "user-info-service", "user-post-service"] }
candid.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
tonic.workspace = true
tonic-web-wasm-client.workspace = true
prost.workspace = true
hmac.workspace = true
hex.workspace = true
sha2.workspace = true
chrono.workspace = true
tower-http.workspace = true
reqwest.workspace = true
uuid = {workspace = true, features = ["js", "v7", "std"]}

[build-dependencies]
tonic-build.workspace = true
